# vechat

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE_RACON  README.md
example/: ref.fa
mytest/acc90/: hapracon  log  overlaps.raw.paf  racon  reads.fa  reads.fq  reads.hapracon.notrim.fa  reads.racon.fa  reads.racon.notrim.fa  work.sh  xx.fa  xxbb.fa
mytest/xx/: a  reads.corrected.fa
mytest/xx1/: a  overlap.paf  reads.corrected.fa  reads.fa  reads.fq  reads_chunk00.fa  reads_chunk00.fq  reads_chunk01.fa  reads_chunk01.fq
scripts/: filter_fa  racon_wrapper.py  test.py  vechat  vechat.iter2.py  vechat.py  vechat_hpc.fast.bk.sh  vechat_hpc.fast.sh  vechat_hpc.py  vechat_hpc.sh
src/: main.cpp  polisher.cpp  polisher.hpp  window.cpp  window.hpp
src/cuda/: cudapolisher.cpp  cudapolisher.hpp
